Update Projet EHTP RGPH2004.ipynb

--- a/Projet EHTP RGPH2004.ipynb
+++ b/Projet EHTP RGPH2004.ipynb
@@ -9,14 +9,14 @@
     "# <div style=\"text-align:center\"> EHTP <font color='green'> -  </font>  Master Spécialisé Data Engineering 2019/2020 </div>\n",
     "# <div style=\"text-align:center\"> Module <font color='green'> 3 </font>  : Python for Data Science </div>\n",
     "\n",
-    "### <div style=\"text-align:center\"> <font color='green'> Author </font>  : El Missaoui Issam </div>"
+    "### <div style=\"text-align:center\">  Author  : El Missaoui Issam </div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <br> <font color='green'> -  Capstone Project Introduction    -  </font>                    "
+    "# <br>  -  Capstone Project Introduction    -                     "
    ]
   },
   {
